--- a/src/panels/place.css
+++ b/src/panels/place.css
@@ -152,6 +152,23 @@
   background-color: #fff;
 }
 
+.Place__order--disabled {
+  opacity: 0.35;
+  pointer-events: none;
+  cursor: not-allowed;
+
+  flex-grow: 1;
+  height: 65px;
+  border: 0;
+  border-radius: 25px;
+  line-height: 60px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 22px;
+  background-color: #4bb34b;
+  color: #fff;
+}
+
 .Place__order {
   flex-grow: 1;
   height: 65px;
